--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,4 +15,4 @@ jobs:
       - name: Install packages
         run: pip install -r requirements.txt
       - name: Run tests
-        run: python  TP4_budget/myscript.py
+        run: python myscript.py
